src/ui/Form/FormRow/form-row.scss
@import '~zen-css/import';

:host {
    @extend %comp-form-row;

     &, *:not(zen-ui-radio-tabs) {
        @extend %reset;
    }
    input, select, textarea, input[type="file"] + span.input {
        @extend %comp-form-input-general;
    }

    textarea {
        @extend %comp-form-input-textarea;
    }

    select {
        @extend %comp-form-input-select;
    }

    input[type="submit"], zen-ui-button[size=large] {
        @extend %comp-button;
        width: 100%;
    }

    .label {
        display: block;
        margin: var(--size-small) 0;
        color: var(--color-grey-600);
    }

    .hide-empty:empty {
        display: none;
    }

    .hide {
        display: none;
    }
}

